--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
 				<div class="col-1">
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<div id="A" class="circle"></div>
+					<a href="XYZ-TOPIC.html"><div id="A" class="circle"></div></a>
 					<br>
-					<h4>topic </h4> 
+					<a href="XYZ-TOPIC.html"><h4>topic</h4></a> 
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<div id="B" class="circle"></div>
+					<a href="XYZ-TOPIC.html"><div id="B" class="circle"></div></a>
 					<br>
-					<h4>topic </h4> 
+					<a href="XYZ-TOPIC.html"><h4>topic </h4></a>
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<div id="C" class="circle"></div>
+					<a href="XYZ-TOPIC.html"><div id="C" class="circle"></div></a>
 					<br>
-					<h4>topic </h4> 
+					<a href="XYZ-TOPIC.html"><h4>topic </h4></a>
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<div id="D" class="circle"></div>
+					<a href="XYZ-TOPIC.html"><div id="D" class="circle"></div></a>
 					<br>
-					<h4>topic </h4> 
+					<a href="XYZ-TOPIC.html"><h4>topic</h4><a/> 
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<div id="E" class="circle"></div>
+					<a href="XYZ-TOPIC.html"><div id="E" class="circle"></div></a>
 					<br>
-					<h4>topic </h4> 
+					<a href="XYZ-TOPIC.html"><h4>topic </h4></a>
 				</div>
 				<div class="col-1">
 				</div>
