--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -10,20 +10,34 @@
 		<div class="container-fluid">
 
 			<!-- asha tries -->
-			<div class ="row mt-3 align-middle text-center"> 
-				<div class = "col-md-2 col-12"> 
-					<h5> Gen XYZ</h5>
+			<div class ="row mt-3  text-center"> 
+				<div class="col-md-3 col-12 pt-2"> 
+					<a href="index.html"><h5>Gen XYZ</h5></a>
 				</div>
-				<div id="circles" class = "col-md-4 col-12 block-center"> 
-					<div class="circle2  mx-1"> </div>
-					<div class="circle2  mx-1"> </div>
-					<div class="circle2  mx-1"> </div>
-					<div class="circle2  mx-1"> </div>
-					<div class="circle2  mx-1"> </div>
-					</div>
-				<div class = "col-md-4 col-12"> </div>
-				<div class = "col-12 col-md-2"> <img class="img-fluid" src="YR_logo.png" >
-</div>
+				<div class="col-md-1 col-2 py-3">
+					<div class="circle2 "> </div>
+				</div>
+				<div class="col-md-1 col-2 py-3">
+					<div class="circle2 "> </div>
+				</div>
+				<div class="col-md-1 col-2 py-3">
+					<div class="circle2 "> </div>
+				</div>
+				<div class="col-md-1 col-2 py-3">
+					<div class="circle2 "> </div>
+				</div>
+				<div class="col-md-1 col-2 py-3">
+					<div class="circle2 "> </div>
+				</div>
+				<!--<div class = "col-md-4 col-12 "> 
+					<div class="circle2 "> </div>
+					<div class="circle2 "> </div>
+					<div class="circle2 "> </div>
+					<div class="circle2 "> </div>
+					<div class="circle2 "> </div>
+				</div> --> 
+				<div class = "col-md-1 col-12"> </div>
+				<div class ="col-12 col-md-2"> <img class="img-fluid" src="YR_logo.png" ></div>
 
 
 
@@ -69,24 +83,40 @@
 			</div>
 			<!--Stories-->
 			<div class="row ">
-				<div class="col-md-4 col-12 text-center" id="storyA">
+				<div class="col-md-4 col-12" id="storyA">
 					<div class="circle my-3"></div>
-					<h6>Title For Story</h6>
-					<audio controls></audio>
+					<div class="text-center">
+						<h6>Title For Story</h6>
+						<audio controls></audio>
+					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div id="genX" class="row pl-2">
+						<h5>Generation X</h5>
+					</div>
 				</div>
-				<div class="col-md-4 col-12 text-center" id="storyB">
+				<div class="col-md-4 col-12" id="storyB">
 					<div class="circle my-3"></div>
-					<h6>Title For Story</h6>
-					<audio controls></audio>
+					<div class="text-center">
+						<h6>Title For Story</h6>
+						<audio controls></audio>
+					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div id="genY" class="row pl-2">
+						<h5>Generation Y</h5>
+					</div>
 				</div>
-				<div class="col-md-4 col-12 text-center" id="storyC">
+				<div class="col-md-4 col-12" id="storyC">
 					<div class="circle my-3"></div>
-					<h6>Title For Story</h6>
-					<audio controls></audio>
+					<div class="text-center">
+						<h6>Title For Story</h6>
+						<audio controls></audio>
+					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div id="genZ" class="row pl-2">
+						<h5>Generation Z</h5>
+					</div>
 				</div>
+
 				<!--Bottom-->
 				<div class="row bottom " height="50px">
 					<br> 
