--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -36,8 +36,8 @@
 					<div class="circle2 "> </div>
 					<div class="circle2 "> </div>
 				</div> --> 
-				<div class = "col-md-1 col-12"> </div>
-				<div class ="col-12 col-md-2"> <img class="img-fluid" src="YR_logo.png" ></div>
+				<div class = "col-md-2 col-12"> </div>
+				<div class ="col-12 col-md-2"> <a href="https://youthradio.org"><img class="img-fluid" src="YR_logo.png"></a></div>
 
 
 
