--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 		<div class="container-fluid">
 			<!-- YR Logo -->
 			<div class="row mt-4">
-				<div class="col-md-2 col-12 text-center">
-					<img class="img-fluid" src="YR_logo.png" >
+				<div class="col-md-10 col-12"></div>
+				<div class="col-md-2 col-12">
+					<a href="https://youthradio.org"><img class="img-fluid" src="YR_logo.png" ></a>
 				</div>
 			</div>
 			<!-- Title -->
