--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<!-- YR Logo -->
 			<div class="row mt-4">
 				<div class="col-md-10 col-12"></div>
-				<div class="col-md-2 col-12">
+				<div class="col-md-2 col-12 text-center">
 					<a href="https://youthradio.org"><img class="img-fluid" src="YR_logo.png" ></a>
 				</div>
 			</div>
