--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<!-- Title -->
 			<div class="row mt-2">
 				<div class="col text-center">
-				<h1>GENXYZ</h1>
+				<h1><span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span></h1>
 				<br>
 				<h5>This is the Subtitle.</h5>
 				<br>
@@ -29,29 +29,29 @@
 				<div class="col-1">
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="A" class="circle"></div></a>
+					<a href="XYZ-TOPIC.html"><div id="A" class="circle a"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html"><h4>topic</h4></a> 
+					<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4></a> 
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="B" class="circle"></div></a>
+					<a href="XYZ-TOPIC.html" ><div id="B" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html"><h4>topic </h4></a>
+					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
 				</div>
 				<div class="col-md-2 col-12 py-2">
 					<a href="XYZ-TOPIC.html"><div id="C" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html"><h4>topic </h4></a>
+					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
 				</div>
 				<div class="col-md-2 col-12 py-2">
 					<a href="XYZ-TOPIC.html"><div id="D" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html"><h4>topic</h4><a/> 
+					<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4><a/> 
 				</div>
 				<div class="col-md-2 col-12 py-2">
 					<a href="XYZ-TOPIC.html"><div id="E" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html"><h4>topic </h4></a>
+					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
 				</div>
 				<div class="col-1">
 				</div>
