--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -85,13 +85,17 @@
 			<div class="row ">
 				<div class="col-md-4 col-12" id="storyA">
 					<div class="circle my-3"></div>
+
 					<div class="text-center">
 						<h6>Title For Story</h6>
 						<audio controls></audio>
 					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<div id="genX" class="row pl-2">
-						<h5>Generation X</h5>
+					
+					<div  class="row  ">
+						<div class="col-12 X">
+						<h5 class="pt-1">Generation X</h5>
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-12" id="storyB">
@@ -101,8 +105,10 @@
 						<audio controls></audio>
 					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<div id="genY" class="row pl-2">
-						<h5>Generation Y</h5>
+					<div  class="row  ">
+						<div class="col-12 X">
+						<h5 class="pt-1">Generation Y</h5>
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-12" id="storyC">
@@ -112,14 +118,17 @@
 						<audio controls></audio>
 					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<div id="genZ" class="row pl-2">
-						<h5>Generation Z</h5>
+					<div  class="row  ">
+						<div class="col-12 X">
+						<h5 class="pt-1">Generation Z</h5>
+						</div>
 					</div>
 				</div>
 
 				<!--Bottom-->
-				<div class="row bottom " height="50px">
-					<br> 
+				<div class="row  " height="350px">
+					<br>
+					 <span style="color:#d8d8d8"> hey </span>  
 					<br>
 				</div>
 			</div>	
