--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -23,30 +23,30 @@
 						<div class="d-flex justify-content-lg-center justify-content-center"> <a href="https://youthradio.org"><img  class="youthSmall img-fluid pb-5 ml-5" width="60%" height="60%" src="YR_logo.png"></a></div>
 
 						<div class="titleMobile text-center"> <h1 class="text-center">
-						<a href="index.html">Gen XYZ</a>
+						<a href="index.html"><span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span></a>
 						</h1> </div>
 
 					<span style="min-width: 220px;" class="d-flex justify-content-sm-between mt-2 ">
 
 					<div class="ml-2">
 						<div class="titleDesk"> <h4 class="mr-3 mt-2">
-						<a href="index.html">Gen XYZ</a>
+						<span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span>
 						</h4> </div>
 					</div>
 					<div class="ml-1">
-						<div class="circle2 "> </div>
+						<div id="A"class="circle2"> </div>
 					</div>
 					<div class="ml-1">
-						<div class="circle2 "> </div>
+						<div id="B"class="circle2 "> </div>
 					</div>
 					<div class="ml-1">
-						<div class="circle2 "> </div>
+						<div id="C" class="circle2 "> </div>
 					</div>
 					<div class="ml-1">
-						<div class="circle2 "> </div>
+						<div id="D" class="circle2 "> </div>
 					</div>
 					<div class="ml-1">
-						<div class="circle2 "> </div>
+						<div id="E" class="circle2 "> </div>
 					</div>
 
 				</span>
