--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -29,9 +29,9 @@
 					<span style="min-width: 220px;" class="d-flex justify-content-sm-between mt-2 ">
 
 					<div class="ml-2">
-						<div class="titleDesk"> <h4 class="mr-3 mt-2">
+						<div class="titleDesk"> <a href="index.html"><h4 class="mr-3 mt-2">
 						<span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span>
-						</h4> </div>
+							</h4></a></div>
 					</div>
 					<div class="ml-1">
 						<div id="A"class="circle2"> </div>
