CSV loader and parser code example plus libraries

--- a/index.html
+++ b/index.html
@@ -1,67 +1,74 @@
 <!DOCTYPE html>
 <html>
-	<title>Generation XYZ</title>
-	<head>
+<title>Generation XYZ</title>
+
+<head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="XYZ.css">
-	    <link rel="shortcut icon" href="img/yrcircle.png">
+	<link rel="shortcut icon" href="img/yrcircle.png">
+</head>
 
-	</head>
-	<body>
-		<div class="container-fluid">
-			<!-- YR Logo -->
-			<div class="row mt-4">
-				<div class="col-md-10 col-12"></div>
-				<div class="col-md-2 col-12 text-center">
-					<a href="https://youthradio.org"><img class="img-fluid" src="YR_logo.png" ></a>
-				</div>
+<body>
+	<div class="container-fluid">
+		<!-- YR Logo -->
+		<div class="row mt-4">
+			<div class="col-md-10 col-12"></div>
+			<div class="col-md-2 col-12 text-center">
+				<a href="https://youthradio.org"><img class="img-fluid" src="YR_logo.png" ></a>
 			</div>
-			<!-- Title -->
-			<div class="row mt-2">
-				<div class="col text-center">
+		</div>
+		<!-- Title -->
+		<div class="row mt-2">
+			<div class="col text-center">
 				<h1><span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span></h1>
 				<br>
 				<h5>This is the Subtitle.</h5>
 				<br>
-				</div>
 			</div>
-			<!-- Circles -->
-			<div class="row text-center">
-				<div class="col-1">
-				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="A" class="circle a"></div></a>
-					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4></a> 
-				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html" ><div id="B" class="circle"></div></a>
-					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
-				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="C" class="circle"></div></a>
-					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
-				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="D" class="circle"></div></a>
-					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4><a/> 
+		</div>
+		<!-- Circles -->
+		<div class="row text-center">
+			<div class="col-1">
+			</div>
+			<div class="col-md-2 col-12 py-2">
+				<a href="XYZ-TOPIC.html">
+					<div id="A" class="circle a"></div>
+				</a>
+				<br>
+				<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4></a>
+			</div>
+			<div class="col-md-2 col-12 py-2">
+				<a href="XYZ-TOPIC.html">
+					<div id="B" class="circle"></div>
+				</a>
+				<br>
+				<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
+			</div>
+			<div class="col-md-2 col-12 py-2">
+				<a href="XYZ-TOPIC.html">
+					<div id="C" class="circle"></div>
+				</a>
+				<br>
+				<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
+			</div>
+			<div class="col-md-2 col-12 py-2">
+				<a href="XYZ-TOPIC.html">
+					<div id="D" class="circle"></div>
+				</a>
+				<br>
+				<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4><a/>
 				</div>
 				<div class="col-md-2 col-12 py-2">
 					<a href="XYZ-TOPIC.html"><div id="E" class="circle"></div></a>
-					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
-				</div>
-				<div class="col-1">
-				</div>
+				<br>
+				<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
+			</div>
+			<div class="col-1">
 			</div>
 		</div>
+	</div>
 
+</body>
 
-
-
-	</body>
 </html>
