--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Generation XYZ</title>
 	<head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="XYZ.css">
 	    <link rel="shortcut icon" href="img/yrcircle.png">
@@ -30,34 +31,36 @@
 			<div class="row text-center">
 				<div class="col-1">
 				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="A" class="circle a"></div></a>
+				<div class="col-md-2 col-12 py-2 politics">
+					<a href="XYZ-TOPIC.html#politics"><div id="A" class="circle a"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4></a> 
+					<a class="a"><h4>Politics</h4></a> 
 				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html" ><div id="B" class="circle"></div></a>
+				<div class="col-md-2 col-12 py-2 technology">
+					<a href="XYZ-TOPIC.html#technology" ><div id="B" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
+					<a class="a"><h4>Technology</h4></a>
 				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="C" class="circle"></div></a>
+				<div class="col-md-2 col-12 py-2 fashion">
+					<a href="XYZ-TOPIC.html#fashion"><div id="C" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
+					<a class="a"><h4>Fashion</h4></a>
 				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="D" class="circle"></div></a>
+				<div class="col-md-2 col-12 py-2 slang">
+					<a href="XYZ-TOPIC.html#slang"><div id="D" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4><a/> 
+					<a class="a"><h4>Slang</h4><a/> 
 				</div>
-				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="E" class="circle"></div></a>
+				<div class="col-md-2 col-12 py-2 culture">
+					<a href="XYZ-TOPIC.html#culture"><div id="E" class="circle"></div></a>
 					<br>
-					<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
+					<a class="a"><h4>Culture</h4></a>
 				</div>
 				<div class="col-1">
 				</div>
 			</div>
+			<script src="articledata.js"></script>
+			<script src="main.js"></script>
 		</div>
 
 
