--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@
 			<div class="col-1">
 			</div>
 			<div class="col-md-2 col-12 py-2">
-				<a href="XYZ-TOPIC.html">
+				<a href="XYZ-TOPIC.html#politics">
 					<div id="A" class="circle a"></div>
 				</a>
 				<br>
 				<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4></a>
 			</div>
 			<div class="col-md-2 col-12 py-2">
-				<a href="XYZ-TOPIC.html">
+				<a href="XYZ-TOPIC.html#technology">
 					<div id="B" class="circle"></div>
 				</a>
 				<br>
 				<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
 			</div>
 			<div class="col-md-2 col-12 py-2">
-				<a href="XYZ-TOPIC.html">
+				<a href="XYZ-TOPIC.html#fashion">
 					<div id="C" class="circle"></div>
 				</a>
 				<br>
 				<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
 			</div>
 			<div class="col-md-2 col-12 py-2">
-				<a href="XYZ-TOPIC.html">
+				<a href="XYZ-TOPIC.html#slang">
 					<div id="D" class="circle"></div>
 				</a>
 				<br>
 				<a href="XYZ-TOPIC.html" class="a"><h4>topic</h4><a/>
 				</div>
 				<div class="col-md-2 col-12 py-2">
-					<a href="XYZ-TOPIC.html"><div id="E" class="circle"></div></a>
+					<a href="XYZ-TOPIC.html#music / culture"><div id="E" class="circle"></div></a>
 				<br>
 				<a href="XYZ-TOPIC.html" class="a"><h4>topic </h4></a>
 			</div>
