--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -146,9 +146,9 @@
 						<h6 id="genXtitle"></h6>
 						<audio controls></audio>
 					</div>
-					<p id="genXDesc"></p>
+					<p id="genXDesc" class="Desc pb-sm-5"></p>
 					
-					<div class="row">
+					<div class="row stick-to-bottom-row">
 						<div class="col-12 X">
 						<h5 class="pt-1 genTitle">Generation X</h5>
 						</div>
@@ -162,8 +162,8 @@
 						<h6 id="genYtitle"></h6>
 						<audio controls></audio>
 					</div>
-					<p id="genYDesc"></p>
-					<div  class="row  ">
+					<p id="genYDesc" class="Desc pb-sm-5"></p>
+					<div  class="row stick-to-bottom-row">
 						<div class="col-12 X">
 						<h5 class="pt-1">Generation Y</h5>
 						</div>
@@ -177,8 +177,8 @@
 						<h6 id="genZtitle">Title For Story</h6>
 						<audio controls></audio>
 					</div>
-					<p id="genZDesc"></p>
-					<div  class="row  ">
+					<p id="genZDesc" class="Desc pb-sm-5"></p>
+					<div  class="row stick-to-bottom-row">
 						<div class="col-12 X">
 						<h5 class="pt-1">Generation Z</h5>
 						</div>
