date & color updates

--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -150,7 +150,7 @@
 					
 					<div class="row stick-to-bottom-row">
 						<div class="col-12 X">
-						<h5 class="pt-1 genTitle">Generation X</h5>
+						<h5 class="pt-1 genTitle">Gen X <span class="float-right" id="XYear"></span></h5>
 						</div>
 					</div>
 				</div>
@@ -165,7 +165,7 @@
 					<p id="genYDesc" class="Desc pb-sm-5"></p>
 					<div  class="row stick-to-bottom-row">
 						<div class="col-12 X">
-						<h5 class="pt-1">Generation Y</h5>
+						<h5 class="pt-1">Gen Y<span class="float-right" id="YYear"></span></h5>
 						</div>
 					</div>
 				</div>
@@ -180,7 +180,7 @@
 					<p id="genZDesc" class="Desc pb-sm-5"></p>
 					<div  class="row stick-to-bottom-row">
 						<div class="col-12 X">
-						<h5 class="pt-1">Generation Z</h5>
+						<h5 class="pt-1">Gen Z<span class="float-right" id="ZYear"></span></h5>
 						</div>
 					</div>
 				</div>
