--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -59,77 +59,11 @@
 
 			</div>
 				
-
-			
-
-		<!--	asha tries  
-			<div class ="row mt-3  text-center"> 
-				<div class="col-md-3 col-12 pt-2"> 
-					<a href="index.html"><h5>Gen XYZ</h5></a>
-				</div>
-				<div class="col-md-1 col-2 py-3">
-					<div class="circle2 "> </div>
-				</div>
-				<div class="col-md-1 col-2 py-3">
-					<div class="circle2 "> </div>
-				</div>
-				<div class="col-md-1 col-2 py-3">
-					<div class="circle2 "> </div>
-				</div>
-				<div class="col-md-1 col-2 py-3">
-					<div class="circle2 "> </div>
-				</div>
-				<div class="col-md-1 col-2 py-3">
-					<div class="circle2 "> </div>
-				</div>
-
-
-				<div class = "col-md-4 col-12 "> 
-					<div class="circle2 "> </div>
-					<div class="circle2 "> </div>
-					<div class="circle2 "> </div>
-					<div class="circle2 "> </div>
-					<div class="circle2 "> </div>
-				</div>  
-				<div class = "col-md-2 col-12"> </div>
-				<div class ="col-12 col-md-2"> <a href="https://youthradio.org"><img class="img-fluid" src="YR_logo.png"></a></div>
-
-
-
-			</div>-->
-
-			<!--Header-->
-			<!--
-			<div class="row pt-3" height="100">
-				<div id="GENXYZ"class="col-md-2">
-					<h5>GENXYZ</h5> </div>
-		
-
-					<div class="col-sm-*">
-						<div class="circle2 p-2"></div> 
-					</div>
-					<div class="col-sm-*">
-						<div class="circle2 p-2"></div> 
-					</div>
-					<div class="col-sm-*">
-						<div class="circle2 p-2"></div>
-					</div>
-					<div class="col-sm-*">
-						<div class="circle2 p-2"></div>
-					</div>
-					<div class="col-sm-*">
-						<div class="circle2 p-2"></div>
-					</div>
-				<div class="col-2 ml-md-auto">
-					<img class="img-fluid" src="YR_logo.png" >
-				</div>
-			</div>
-		-->
 			<!--Topic-->
 			<div class="row">
 				<div class="col-md-8 col-12">
 					<h1 id="topic"></h1>
-					<p id="description"></p>
+					<h2 id="description" class="pb-2"></h2>
 					 </div>
 				<div class="col-md-4 col-12"> </div>
 
@@ -143,7 +77,7 @@
 
 					
 					<div class="text-center">
-						<h6 id="genXtitle"></h6>
+						<h4 id="genXtitle"></h4>
 						<audio controls></audio>
 					</div>
 					<p id="genXDesc" class="Desc pb-sm-5"></p>
@@ -159,7 +93,7 @@
 					<img id="genYIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
-						<h6 id="genYtitle"></h6>
+						<h4 id="genYtitle"></h4>
 						<audio controls></audio>
 					</div>
 					<p id="genYDesc" class="Desc pb-sm-5"></p>
@@ -174,7 +108,7 @@
 					<img id="genZIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
-						<h6 id="genZtitle">Title For Story</h6>
+						<h4 id="genZtitle">Title For Story</h4>
 						<audio controls></audio>
 					</div>
 					<p id="genZDesc" class="Desc pb-sm-5"></p>
