--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="col text-center">
 				<h1><span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span></h1>
 				<br>
-				<h5>This is the Subtitle.</h5>
+				<h5>Youth Radio storytelling across generations!</h5>
 				<br>
 				</div>
 			</div>
