--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="col-md-2 col-12 py-2 culture">
 					<a href="XYZ-TOPIC.html#culture"><div id="E" class="circle"></div></a>
 					<br>
-					<a class="a"><h4>Culture</h4></a>
+					<a class="a"><h4>Music</h4></a>
 				</div>
 				<div class="col-1">
 				</div>
