too many changes

--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -35,10 +35,10 @@
 							</h4></a></div>
 					</div>
 					<div class="ml-1">
-						<div onclick="pageOne()" id="A"class="circle2"> </div>
+						<div onclick="pageOne()" id="A" class="circle2"> </div>
 					</div>
 					<div class="ml-1">
-						<div onclick="pageTwo()" id="B"class="circle2"> </div>
+						<div onclick="pageFive()" id="E" class="circle2"> </div>
 					</div>
 					<div class="ml-1">
 						<div onclick="pageThree()" id="C" class="circle2"> </div>
@@ -47,7 +47,7 @@
 						<div onclick="pageFour()" id="D" class="circle2"> </div>
 					</div>
 					<div class="ml-1">
-						<div onclick="pageFive()" id="E" class="circle2"> </div>
+						<div onclick="pageTwo()" id="B" class="circle2"> </div>
 					</div>
 
 				</span>
@@ -72,13 +72,13 @@
 			<!--Stories-->
 			<div class="row">
 				<div class="col-md-4 col-12" id="storyA">
-					<div class="circle my-3">
+					<div class=" my-3">
 						<img id="genXIMG" class="circle" src=""></img></div>
 
 					
 					<div class="text-center">
 						<h4 id="genXtitle"></h4>
-						<audio controls></audio>
+						<audio id="audioX" controls></audio>
 					</div>
 					<p id="genXDesc" class="Desc pb-sm-5"></p>
 					
@@ -89,12 +89,12 @@
 					</div>
 				</div>
 				<div class="col-md-4 col-12" id="storyB">
-					<div class="circle my-3">
+					<div class=" my-3">
 					<img id="genYIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
 						<h4 id="genYtitle"></h4>
-						<audio controls></audio>
+						<audio id="audioY" controls></audio>
 					</div>
 					<p id="genYDesc" class="Desc pb-sm-5"></p>
 					<div  class="row stick-to-bottom-row">
@@ -104,12 +104,12 @@
 					</div>
 				</div>
 				<div class="col-md-4 col-12" id="storyC">
-					<div class="circle my-3">
+					<div class=" my-3">
 					<img id="genZIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
 						<h4 id="genZtitle">Title For Story</h4>
-						<audio controls></audio>
+						<audio id="audioZ" controls></audio>
 					</div>
 					<p id="genZDesc" class="Desc pb-sm-5"></p>
 					<div  class="row stick-to-bottom-row">
