--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
 				<div class="col-md-2 col-12 py-2 politics">
 					<a href="XYZ-TOPIC.html#politics"><div id="A" class="circle a"></div></a>
 					<br>
-					<a class="a"><h4>Politics</h4></a> 
-				</div>
-				<div class="col-md-2 col-12 py-2 technology">
-					<a href="XYZ-TOPIC.html#technology" ><div id="B" class="circle"></div></a>
-					<br>
-					<a class="a"><h4>Technology</h4></a>
-				</div>
-				<div class="col-md-2 col-12 py-2 fashion">
-					<a href="XYZ-TOPIC.html#fashion"><div id="C" class="circle"></div></a>
-					<br>
-					<a class="a"><h4>Fashion</h4></a>
-				</div>
-				<div class="col-md-2 col-12 py-2 slang">
-					<a href="XYZ-TOPIC.html#slang"><div id="D" class="circle"></div></a>
-					<br>
-					<a class="a"><h4>Slang</h4><a/> 
+					<a href="XYZ-TOPIC.html#politics" class="a-1"><h4>Politics</h4></a> 
 				</div>
 				<div class="col-md-2 col-12 py-2 culture">
 					<a href="XYZ-TOPIC.html#culture"><div id="E" class="circle"></div></a>
 					<br>
-					<a class="a"><h4>Music</h4></a>
+					<a href="XYZ-TOPIC.html#culture" class="a-2"><h4>Music</h4></a>
+				</div>
+				<div class="col-md-2 col-12 py-2 fashion">
+					<a href="XYZ-TOPIC.html#fashion"><div id="C" class="circle"></div></a>
+					<br>
+					<a href="XYZ-TOPIC.html#fashion" class="a-3"><h4>Fashion</h4></a>
+				</div>
+				<div class="col-md-2 col-12 py-2 slang">
+					<a href="XYZ-TOPIC.html#slang"><div id="D" class="circle"></div></a>
+					<br>
+					<a href="XYZ-TOPIC.html#slang" class="a-4"><h4>Slang</h4><a/> 
+				</div>
+				<div class="col-md-2 col-12 py-2 technology">
+					<a href="XYZ-TOPIC.html#technology" ><div id="B" class="circle"></div></a>
+					<br>
+					<a href="XYZ-TOPIC.html#technology" class="a-5"><h4>Technology</h4></a>
 				</div>
 				<div class="col-1">
 				</div>
