--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	</head>
 	<body>
 		<div class="container-fluid">
+
+
 			<!-- YR Logo -->
 			<div class="row mt-4">
 				<div class="col-md-10 col-12"></div>
@@ -18,6 +20,8 @@
 					<a href="https://youthradio.org"><img class="img-fluid" src="YR_logo.png" ></a>
 				</div>
 			</div>
+
+
 			<!-- Title -->
 			<div class="row mt-2">
 				<div class="col text-center">
@@ -27,42 +31,64 @@
 				<br>
 				</div>
 			</div>
-			<!-- Circles -->
+
+
+			<!-- Circles & containers -->
 			<div class="row text-center">
 				<div class="col-1">
 				</div>
+
+
 				<div class="col-md-2 col-12 py-2 politics">
-					<a href="XYZ-TOPIC.html#politics"><div id="A" class="circle a"></div></a>
-					<br>
-					<a href="XYZ-TOPIC.html#politics" class="a-1"><h4>Politics</h4></a> 
+					<a class="a-1" href="XYZ-TOPIC.html#politics"><div id="A" class="circle a"></div>
+					<h4 class="pt-4">Politics</h4>
+				</a>
+				<br>
 				</div>
+
+
+
 				<div class="col-md-2 col-12 py-2 culture">
-					<a href="XYZ-TOPIC.html#culture"><div id="E" class="circle"></div></a>
+					<a class="a-2" href="XYZ-TOPIC.html#culture"><div id="E" class="circle"></div>
+					<h4 class="pt-4">Music</h4>
+					</a>
 					<br>
-					<a href="XYZ-TOPIC.html#culture" class="a-2"><h4>Music</h4></a>
 				</div>
+
+
 				<div class="col-md-2 col-12 py-2 fashion">
-					<a href="XYZ-TOPIC.html#fashion"><div id="C" class="circle"></div></a>
+					<a class="a-3" href="XYZ-TOPIC.html#fashion"><div id="C" class="circle"></div>
+					<h4 class="pt-4">Fashion</h4>
+					</a>
 					<br>
-					<a href="XYZ-TOPIC.html#fashion" class="a-3"><h4>Fashion</h4></a>
 				</div>
+
+
 				<div class="col-md-2 col-12 py-2 slang">
-					<a href="XYZ-TOPIC.html#slang"><div id="D" class="circle"></div></a>
+					<a class="a-4" href="XYZ-TOPIC.html#slang"><div id="D" class="circle"></div>
+					<h4 class="pt-4">Slang</h4>
+					</a>
 					<br>
-					<a href="XYZ-TOPIC.html#slang" class="a-4"><h4>Slang</h4><a/> 
 				</div>
+
+
 				<div class="col-md-2 col-12 py-2 technology">
-					<a href="XYZ-TOPIC.html#technology" ><div id="B" class="circle"></div></a>
+					<a class="a-5" href="XYZ-TOPIC.html#technology" ><div id="B" class="circle"></div>
+					<h4 class="pt-4">Technology</h4>
+					</a>
 					<br>
-					<a href="XYZ-TOPIC.html#technology" class="a-5"><h4>Technology</h4></a>
 				</div>
+
+
 				<div class="col-1">
 				</div>
 			</div>
+
+
+			
+		</div>
 			<script src="articledata.js"></script>
 			<script src="main.js"></script>
-		</div>
-
 
 
 
