--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -30,8 +30,8 @@
 					<span style="min-width: 220px;" class="d-flex justify-content-sm-between mt-2 ">
 
 					<div class="ml-2">
-						<div class="titleDesk"> <a href="index.html"><h4 class="mr-3 mt-2">
-						<span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span>
+						<div class="titleDesk"> <a href="index.html"><h4 class="mr-3">
+						<span class="a titleDesk">GEN</span><span class="b titleDesk">X</span><span class="c titleDesk">Y</span><span class="d titleDesk">Z</span>
 							</h4></a></div>
 					</div>
 					<div class="ml-1">
@@ -77,7 +77,8 @@
 
 					
 					<div class="text-center">
-						<h4 id="genXtitle"></h4>
+						<h4 class="" id="genXtitle"></h4>
+						<h5><a id="genXLink">Read More</a></h5>
 						<audio id="audioX" controls></audio>
 					</div>
 					<p id="genXDesc" class="Desc pb-sm-5"></p>
@@ -94,6 +95,7 @@
 				</div>
 					<div class="text-center">
 						<h4 id="genYtitle"></h4>
+						<h5 ><a id="genYLink">Read More</a></h5>
 						<audio id="audioY" controls></audio>
 					</div>
 					<p id="genYDesc" class="Desc pb-sm-5"></p>
@@ -108,7 +110,8 @@
 					<img id="genZIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
-						<h4 id="genZtitle">Title For Story</h4>
+						<h4 id="genZtitle"></h4>
+						<h5><a id="genZLink">Read More</a></h5>
 						<audio id="audioZ" controls></audio>
 					</div>
 					<p id="genZDesc" class="Desc pb-sm-5"></p>
