--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -77,8 +77,7 @@
 
 					
 					<div class="text-center">
-						<h4 class="" id="genXtitle"></h4>
-						<h5><a id="genXLink">Read More</a></h5>
+						<a id="genXLink"><h4 class="" id="genXtitle"></h4></a>
 						<audio id="audioX" controls></audio>
 					</div>
 					<p id="genXDesc" class="Desc pb-sm-5"></p>
@@ -94,8 +93,7 @@
 					<img id="genYIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
-						<h4 id="genYtitle"></h4>
-						<h5 ><a id="genYLink">Read More</a></h5>
+						<a id="genYLink"><h4 id="genYtitle"></h4></a>
 						<audio id="audioY" controls></audio>
 					</div>
 					<p id="genYDesc" class="Desc pb-sm-5"></p>
@@ -110,8 +108,7 @@
 					<img id="genZIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
-						<h4 id="genZtitle"></h4>
-						<h5><a id="genZLink">Read More</a></h5>
+						<a id="genZLink"><h4 id="genZtitle"></h4></a>
 						<audio id="audioZ" controls></audio>
 					</div>
 					<p id="genZDesc" class="Desc pb-sm-5"></p>
