randomization added, only on front page though

--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
 
 			<!-- Title -->
 			<div class="row mt-2">
+				
 				<div class="col text-center">
-				<h1><span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span></h1>
+				<h1>
+					<a onclick="surpriseMe()" href="XYZ-TOPIC.html#random">
+					<span class="a">GEN</span><span class="b">X</span><span class="c">Y</span><span class="d">Z</span></h1>
+					</a>
 				<br>
 				<h5>Youth Radio storytelling across generations!</h5>
 				<br>
 				</div>
+				
 			</div>
 
 
@@ -39,7 +44,7 @@
 				</div>
 
 
-				<div class="col-md-2 col-12 py-2 politics">
+				<div class="col-lg-2 col-12 py-2 politics">
 					<a class="a-1" href="XYZ-TOPIC.html#politics"><div id="A" class="circle a"></div>
 					<h4 class="pt-4">Politics</h4>
 				</a>
@@ -48,7 +53,7 @@
 
 
 
-				<div class="col-md-2 col-12 py-2 culture">
+				<div class="col-lg-2 col-12 py-2 culture">
 					<a class="a-2" href="XYZ-TOPIC.html#culture"><div id="E" class="circle"></div>
 					<h4 class="pt-4">Music</h4>
 					</a>
@@ -56,7 +61,7 @@
 				</div>
 
 
-				<div class="col-md-2 col-12 py-2 fashion">
+				<div class="col-lg-2 col-12 py-2 fashion">
 					<a class="a-3" href="XYZ-TOPIC.html#fashion"><div id="C" class="circle"></div>
 					<h4 class="pt-4">Fashion</h4>
 					</a>
@@ -64,7 +69,7 @@
 				</div>
 
 
-				<div class="col-md-2 col-12 py-2 slang">
+				<div class="col-lg-2 col-12 py-2 slang">
 					<a class="a-4" href="XYZ-TOPIC.html#slang"><div id="D" class="circle"></div>
 					<h4 class="pt-4">Slang</h4>
 					</a>
@@ -72,7 +77,7 @@
 				</div>
 
 
-				<div class="col-md-2 col-12 py-2 technology">
+				<div class="col-lg-2 col-12 py-2 technology">
 					<a class="a-5" href="XYZ-TOPIC.html#technology" ><div id="B" class="circle"></div>
 					<h4 class="pt-4">Technology</h4>
 					</a>
