--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -174,7 +174,7 @@
 							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 					    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_962a6c84da5c12bc5b3486086_77a1c5e71a" tabindex="-1" value=""></div>
-					    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button clear"></div>
 					    </div>
 						</form>
 						</div>
