More randomization in color added (buttons)

--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -150,17 +150,19 @@
 
 			<div class="row text-center">
 						
-				<div class="col-12">
-						<a onclick="surpriseMe()" href="XYZ-TOPIC.html#random">
-						<button type="button" class="btn btn-info d-md-none d-block">random</button>
-					</a>
-				</div>
+	
 					</div>
 
 
 
 			<div class="row text-center d-flex justify-content-center m-2">
-				 
+
+				<div class="mb-2">
+						<a onclick="surpriseMe()" href="XYZ-TOPIC.html#random">
+						<button id="mRandom" type="button" class="btn btn-info d-md-none d-block">Surprise Me!</button>
+					</a>
+				</div>
+
 				  <div class="col-12 h4">
 				   Love Youth Radio? Join the Newsletter!
 				  </div>
