fix random button

--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -13,8 +13,6 @@
 		<meta name="viewport" content="width=device-width, intial-scale=1.0">
 	</head>
 	<body>
-		<a href="#random">
-		</a>
 		<div class="container-fluid">
 
 		<!-- devin tries -->
@@ -59,9 +57,7 @@
 						<div id="E" class="circle2"> </div>
 					</div>
 					<div class="ml-1 random-DT">
-						<a href="XYZ-TOPIC.html">
-						<button id="surpriseMe" type="button" class="btn btn-outline-secondary d-none d-md-block">random</button>
-					</a>
+						<button type="button" class="surpriseMe btn btn-outline-secondary d-none d-md-block">Random</button>
 					</div>
 
 
@@ -157,9 +153,7 @@
 			<div class="row text-center d-flex justify-content-center m-2">
 
 				<div class="mb-2">
-						<a onclick="surpriseMe()" href="XYZ-TOPIC.html#random">
-						<button id="mRandom" type="button" class="btn btn-info d-md-none d-block">Surprise Me!</button>
-					</a>
+						<button type="button" class="surpriseMe btn btn-info d-md-none d-block">Surprise Me!</button>
 				</div>
 
 				  <div class="col-12 h4">
@@ -204,8 +198,6 @@
 
 		<script src="libs/papaparse.min.js"></script>
 		<script src="libs/jquery-3.2.1.min.js"></script>
-		<script src="articledata.js"></script>
-		<script src="redirect.js"></script>
 		<script src="libs/scripts.js"></script>
 	</body>
 </html>
