organizing files and add local resources
Bootstrap and dependencies added to the repo

--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -3,14 +3,22 @@
 	<head>
 		<title>GENXYZ Topic</title>
 		<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-		<link rel="stylesheet" href="XYZ-TOPIC.css">
-		<meta name="viewport" content="width=device-width, intial-scale=1.0">
+		<style type="text/css">
+			#mc_embed_signup {
+				background: #fff;
+				clear: left;
+				font: 14px Helvetica, Arial, sans-serif;
+			}
+
+			/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+				   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+		</style>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/XYZ-TOPIC.css">
+		<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -195,9 +203,10 @@
 		</div>
 
 		<!--JS files, their placement is important! -->
-
-		<script src="libs/papaparse.min.js"></script>
 		<script src="libs/jquery-3.2.1.min.js"></script>
+		<script src="libs/popper.min.js"></script>
+		<script src="libs/bootstrap.min.js"></script>
+		<script src="libs/papaparse.min.js"></script>
 		<script src="libs/scripts.js"></script>
 	</body>
 </html>
