Copy, JS and Markup updates

--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -59,11 +59,11 @@
 					<div class="ml-1">
 						<div onclick="pageTwo()" id="B" class="circle2"> </div>
 					</div>
-					<div class="ml-1 random-DT">
+					<!-- <div class="ml-1 random-DT">
 						<a onclick="surpriseMe()" href="XYZ-TOPIC.html#random">
 						<button type="button" class="btn btn-outline-secondary d-none d-md-block">random</button>
 					</a>
-					</div>
+					</div>-->
 
 
 
@@ -94,8 +94,9 @@
 
 					
 					<div class="text-center">
-						<a id="genXLink"><h4 class="" id="genXtitle"></h4></a>
-						<audio id="audioX" controls></audio>
+						<a class="mb-2" id="genXLink"><h4 class="" id="genXtitle"></h4>
+							<h6 class="" id="genXauthor"></h6></a>
+						<audio class="mt-3" id="audioX" controls></audio>
 					</div>
 					<p id="genXDesc" class="Desc pb-sm-5"></p>
 					
@@ -110,8 +111,8 @@
 					<img id="genYIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
-						<a id="genYLink"><h4 id="genYtitle"></h4></a>
-						<audio id="audioY" controls></audio>
+						<a id="genYLink"><h4 id="genYtitle"></h4><h6 class="" id="genYauthor"></h6></a>
+						<audio class="mt-3" id="audioY" controls></audio>
 					</div>
 					<p id="genYDesc" class="Desc pb-sm-5"></p>
 					<div  class="row stick-to-bottom-row">
@@ -125,8 +126,8 @@
 					<img id="genZIMG" class="circle" src=""></img>
 				</div>
 					<div class="text-center">
-						<a id="genZLink"><h4 id="genZtitle"></h4></a>
-						<audio id="audioZ" controls></audio>
+						<a id="genZLink"><h4 id="genZtitle"></h4><h6 class="" id="genZauthor"></h6></a>
+						<audio class="mt-3" id="audioZ" controls></audio>
 					</div>
 					<p id="genZDesc" class="Desc pb-sm-5"></p>
 					<div  class="row stick-to-bottom-row">
@@ -157,9 +158,9 @@
 
 			<div class="row text-center d-flex justify-content-center m-2">
 
-				<div class="mb-2">
+				<div class="mb-4">
 						<a onclick="surpriseMe()" href="XYZ-TOPIC.html#random">
-						<button id="mRandom" type="button" class="btn btn-info d-md-none d-block">Surprise Me!</button>
+						<button id="mRandom" type="button" class="btn btn-outline-secondary  d-md-none d-block">Surprise Me!</button>
 					</a>
 				</div>
 
